welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:2: error: only classes can have declared but undefined members
  def flower(c:Color)
      ^