welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def growFlowers() {
  def flower(c:Color)
}